# unhurry

./: .env  .env.ghpage  .gitignore  .prettierignore  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: publish-android.yaml  publish-desktop.yaml  release.yaml
docs/: voice-input.md
public/: site.webmanifest  sw.js
scripts/: build-all.sh  bump-versions.sh  change-versions.sh
src/: App.tsx  bulma-ext.scss  env.ts  index.scss  index.tsx  lib.ts  panel.scss  store.ts  switch.scss  utils.scss  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: About.scss  About.tsx  MainView.tsx
src/components/artifact-list/: ArtifactListPage.tsx  ArtifactPickModal.tsx  ArtifactPreview.tsx  ArtifactPreviewModal.tsx  CanvasImagePage.tsx  CanvasTextPage.tsx
src/components/chat/: BottomInput.tsx  ChatHistoryView.tsx  ChatPage.tsx  JSONLikeMessage.tsx  MainView.tsx  Message.tsx  PromptTags.tsx  SpeechButton.tsx  Title.tsx  UploadFileButton.tsx  lib.ts  message_types.ts
src/components/chat-list/: ChatListPage.tsx  ChatListView.tsx
src/components/file-list/: FileListPage.tsx  FilePreviewModal.tsx
src/components/logs-page/: LogsPage.tsx
src/components/modal/: ArtifactUploadModal.tsx  ChatWarningsModal.tsx  ConfirmModal.tsx  ModalContainer.tsx  QRModal.tsx  example.tsx  index.ts
src/components/modal-confirm/: ConfirmModal.tsx  index.ts  store.ts
src/components/navbar/: ModelDropdown.tsx  NavBar.tsx
src/components/palette/: Palette.tsx  PaletteContainer.tsx  state.ts
src/components/settings/: GeneralSettings.tsx  ItemList.tsx  MemorySettings.tsx  ModelItem.tsx  ModelList.tsx  SettingsPage.tsx  TagList.tsx  ToolsSettings.tsx  Xxport.tsx
src/components/task/: StatusIcon.tsx  StepItem.tsx  TaskCreatePage.tsx  TaskListPage.tsx  TaskManagerState.tsx  TaskPage.tsx  TaskSummaryPage.tsx  TeamPage.tsx  (+1 more)
src/lib/: clipboard.ts  intl.ts  jso.ts  json.ts  json_schema.ts  md.ts  path.ts  reset.ts  signal.ts  string.ts  utils.ts
src/store/: actions.ts  chat.ts  config.ts  global_actions.ts  global_actions.tsx  global_commands.tsx  nav.ts  store.ts  system_prompts.ts  task.ts
src/styles/: bulma-ext.scss  bulma-nav.scss  comp-palette.scss  comp-spinner.scss  comp-switch.scss  fonts.scss  hljs-theme.scss  index.scss  panel.scss  utils.scss
tauri-plugins/speech-recog/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rollup.config.js
tauri-plugins/speech-recog/android/: build.gradle.kts
tauri-plugins/speech-recog/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugins/speech-recog/android/src/main/: AndroidManifest.xml
tauri-plugins/speech-recog/android/src/main/java/: SpeechRecogPlugin.kt
tauri-plugins/speech-recog/android/src/test/java/: ExampleUnitTest.kt
tauri-plugins/speech-recog/guest-js/: index.ts
tauri-plugins/speech-recog/permissions/: default.toml  speech.toml
tauri-plugins/speech-recog/permissions/autogenerated/: reference.md
tauri-plugins/speech-recog/permissions/schemas/: schema.json
tauri-plugins/speech-recog/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+102 files in other folders)
