[package]
name = "unhurry"
version = "0.6.4-dev0"
description = "Unhurry, be lazy. LLM-based chat app with various actions."
authors = ["lumiknit <aasr4r4@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unhurry_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
lto = true      # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true    # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-http = {version = "2", features = ["unsafe-headers"] }
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = [] }
tauri-plugin-haptics = "2.0.0"
tauri-plugin-opener = "2"
tauri-plugin-speech-recog = { path = "../tauri-plugins/speech-recog" }
tauri-plugin-fs = "2"
tauri-plugin-upload = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
local-ip-address = "0.6"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
