[package]
name = "tauri-plugin-speech-recog"
version = "0.1.0"
authors = [ "lumiknit <aasr4r4@gmail.com>" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-speech-recog"

[dependencies]
tauri = { version = "2.4.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.1.0", features = ["build"] }
